--- a/animada/index.html
+++ b/animada/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./dist/output.css" rel="stylesheet" />
+    <link href="../dist/output.css" rel="stylesheet" />
     <title>Document</title>
     <link
       rel="stylesheet"
@@ -220,7 +220,7 @@
             <div class="flex items-center gap-3 max-lg:hidden">
               <img
                 class="block max-w-32 w-full"
-                src="./public/avaliacoes-fotos.png"
+                src="../public/avaliacoes-fotos.png"
                 alt="+7 mil mulheres renovaram seus cabelos"
               />
               <p class="text-sm">+7 mil mulheres renovaram seus cabelos</p>
@@ -242,7 +242,7 @@
             <div class="flex items-center flex-col gap-2 lg:hidden">
               <img
                 class="block max-w-32 w-full"
-                src="./public/avaliacoes-fotos.png"
+                src="../public/avaliacoes-fotos.png"
                 alt="+7 mil mulheres renovaram seus cabelos"
               />
               <p class="text-sm">+7 mil mulheres renovaram seus cabelos</p>
@@ -252,7 +252,7 @@
           <div class="w-full h-full flex justify-end relative container-hero">
             <img
               class="w-full moca-w-hero max-md:!max-w-80 max-lg:-translate-y-1/2 max-lg:top-1/3 lg:bottom-0 left-1/2 -translate-x-1/2 absolute"
-              src="./public/moca-hero.png"
+              src="../public/moca-hero.png"
               alt="cabelo"
             />
 
@@ -302,7 +302,7 @@
 
               <img
                 class="max-w-40"
-                src="./public/mulheres-recomendam.png"
+                src="../public/mulheres-recomendam.png"
                 alt="mulheres que recomendam"
               />
 
@@ -318,7 +318,7 @@
             <video
               id="beneficios-video"
               class="h-full max-lg:h-96 lg:max-w-[488px] max-lg:w-full object-cover rounded-2xl"
-              src="./public/beneficios/woman-hair.mp4"
+              src="../public/beneficios/woman-hair.mp4"
               autoplay
               muted
               loop
@@ -636,12 +636,12 @@
             class="relative max-lg:order-1 h-50vh lg:h-auto lg:min-h-screen w-full"
           >
             <img
-              src="./public/tratamento-invisivel.png"
+              src="../public/tratamento-invisivel.png"
               alt="Mulher preocupada com a pele e cabelo"
               class="absolute inset-0 w-full h-full object-cover rounded-none lg:rounded-none"
             />
             <!-- <video
-              src="./public/woman-hair.mp4"
+              src="../public/woman-hair.mp4"
               autoplay
               muted
               loop
@@ -768,14 +768,14 @@
             class="relative max-lg:order-1 h-50vh lg:h-auto lg:min-h-screen w-full"
           >
             <!-- <video
-              src="./public/woman-hair.mp4"
+              src="../public/woman-hair.mp4"
               autoplay
               muted
               loop
               class="absolute inset-0 w-full h-full object-cover rounded-none lg:rounded-none"
             ></video> -->
             <img
-              src="./public/tratamento-resolve.png"
+              src="../public/tratamento-resolve.png"
               alt="Mulher preocupada com a pele e cabelo"
               class="absolute inset-0 w-full h-full object-cover rounded-none lg:rounded-none"
             />
@@ -926,14 +926,14 @@
             class="relative max-lg:order-1 h-50vh lg:h-auto lg:min-h-screen w-full"
           >
             <!-- <video
-            src="./public/woman-hair.mp4"
+            src="../public/woman-hair.mp4"
             autoplay
             muted
             loop
             class="absolute inset-0 w-full h-full object-cover rounded-none lg:rounded-none"
           ></video> -->
             <img
-              src="./public/resultados-visiveis.png"
+              src="../public/resultados-visiveis.png"
               alt="Mulher preocupada com a pele e cabelo"
               class="absolute inset-0 w-full h-full object-cover rounded-none lg:rounded-none"
             />
@@ -1007,7 +1007,7 @@
                 <!-- Slide 1 -->
                 <div class="swiper-slide flex flex-col items-center px-2">
                   <img
-                    src="./public/depoimento-slider/depoimento-1.png"
+                    src="../public/depoimento-slider/depoimento-1.png"
                     alt="Depoimento 1"
                     class="rounded-xl shadow-lg w-full max-w-xs mb-4"
                   />
@@ -1015,7 +1015,7 @@
                 <!-- Slide 2 -->
                 <div class="swiper-slide flex flex-col items-center px-2">
                   <img
-                    src="./public/depoimento-slider/depoimento-2.png"
+                    src="../public/depoimento-slider/depoimento-2.png"
                     alt="Depoimento 2"
                     class="rounded-xl shadow-lg w-full max-w-xs mb-4"
                   />
@@ -1023,7 +1023,7 @@
                 <!-- Slide 3 -->
                 <div class="swiper-slide flex flex-col items-center px-2">
                   <img
-                    src="./public/depoimento-slider/depoimento-3.png"
+                    src="../public/depoimento-slider/depoimento-3.png"
                     alt="Depoimento 3"
                     class="rounded-xl shadow-lg w-full max-w-xs mb-4"
                   />
@@ -1031,7 +1031,7 @@
                 <!-- Slide 4 -->
                 <div class="swiper-slide flex flex-col items-center px-2">
                   <img
-                    src="./public/depoimento-slider/depoimento-4.png"
+                    src="../public/depoimento-slider/depoimento-4.png"
                     alt="Depoimento 4"
                     class="rounded-xl shadow-lg w-full max-w-xs mb-4"
                   />
@@ -1039,7 +1039,7 @@
 
                 <div class="swiper-slide flex flex-col items-center px-2">
                   <img
-                    src="./public/depoimento-slider/depoimento-5.png"
+                    src="../public/depoimento-slider/depoimento-5.png"
                     alt="Depoimento 4"
                     class="rounded-xl shadow-lg w-full max-w-xs mb-4"
                   />
@@ -1047,7 +1047,7 @@
 
                 <div class="swiper-slide flex flex-col items-center px-2">
                   <img
-                    src="./public/depoimento-slider/depoimento-6.png"
+                    src="../public/depoimento-slider/depoimento-6.png"
                     alt="Depoimento 4"
                     class="rounded-xl shadow-lg w-full max-w-xs mb-4"
                   />
@@ -1078,12 +1078,12 @@
                   <div class="grid grid-cols-2 gap-0 md:gap-4">
                     <img
                       class="w-full object-cover h-[250px] md:h-[350px] lg:h-[450px]"
-                      src="./public/depoimento/antes-simone-martins.png"
+                      src="../public/depoimento/antes-simone-martins.png"
                       alt="Mulher com cabelo"
                     />
                     <img
                       class="w-full object-cover h-[250px] md:h-[350px] lg:h-[450px]"
-                      src="./public/depoimento/depois-simone-martins.png"
+                      src="../public/depoimento/depois-simone-martins.png"
                       alt="Mulher com cabelo"
                     />
                   </div>
@@ -1145,12 +1145,12 @@
                   <div class="grid grid-cols-2 gap-0 md:gap-4">
                     <img
                       class="w-full object-cover h-[250px] md:h-[350px] lg:h-[450px]"
-                      src="./public/depoimento/antes-juliana-almeida.png"
+                      src="../public/depoimento/antes-juliana-almeida.png"
                       alt="Mulher com cabelo"
                     />
                     <img
                       class="w-full object-cover h-[250px] md:h-[350px] lg:h-[450px]"
-                      src="./public/depoimento/depois-juliana-almeida.png"
+                      src="../public/depoimento/depois-juliana-almeida.png"
                       alt="Mulher com cabelo"
                     />
                   </div>
@@ -1208,12 +1208,12 @@
                   <div class="grid grid-cols-2 gap-0 md:gap-4">
                     <img
                       class="w-full object-cover h-[250px] md:h-[350px] lg:h-[450px]"
-                      src="./public/depoimento/antes-carla-jovino.png"
+                      src="../public/depoimento/antes-carla-jovino.png"
                       alt="Mulher com cabelo"
                     />
                     <img
                       class="w-full object-cover h-[250px] md:h-[350px] lg:h-[450px]"
-                      src="./public/depoimento/depois-carla-jovino.png"
+                      src="../public/depoimento/depois-carla-jovino.png"
                       alt="Mulher com cabelo"
                     />
                   </div>
@@ -1274,12 +1274,12 @@
                   <div class="grid grid-cols-2 gap-0 md:gap-4">
                     <img
                       class="w-full object-cover h-[250px] md:h-[350px] lg:h-[450px]"
-                      src="./public/depoimento/antes-renata-lopes.png"
+                      src="../public/depoimento/antes-renata-lopes.png"
                       alt="Mulher com cabelo"
                     />
                     <img
                       class="w-full object-cover h-[250px] md:h-[350px] lg:h-[450px]"
-                      src="./public/depoimento/depois-renata-lopes.png"
+                      src="../public/depoimento/depois-renata-lopes.png"
                       alt="Mulher com cabelo"
                     />
                   </div>
@@ -1334,12 +1334,12 @@
                   <div class="grid grid-cols-2 gap-0 md:gap-4">
                     <img
                       class="w-full object-cover h-[250px] md:h-[350px] lg:h-[450px]"
-                      src="./public/depoimento/antes-marina-takahashi.png"
+                      src="../public/depoimento/antes-marina-takahashi.png"
                       alt="Mulher com cabelo"
                     />
                     <img
                       class="w-full object-cover h-[250px] md:h-[350px] lg:h-[450px]"
-                      src="./public/depoimento/depois-marina-takahashi.png"
+                      src="../public/depoimento/depois-marina-takahashi.png"
                       alt="Mulher com cabelo"
                     />
                   </div>
@@ -3384,7 +3384,7 @@
               class="bg-[#FFF7F2] rounded-2xl p-8 flex max-md:flex-col gap-4 items-center justify-center"
             >
               <img
-                src="./public/pandagrow.png"
+                src="../public/pandagrow.png"
                 class="max-w-44"
                 alt="PandaGlow"
               />
@@ -4177,7 +4177,7 @@
                 class="font-semibold text-lg cursor-pointer flex items-center gap-4 flex-col md:flex-row"
               >
                 <img
-                  src="./public/vitamina-b7.png"
+                  src="../public/vitamina-b7.png"
                   alt="vitamina-b7"
                   class="md:w-14 md:h-14 rounded-lg"
                 />
@@ -4205,7 +4205,7 @@
                 class="font-semibold text-lg cursor-pointer flex items-center gap-4 flex-col md:flex-row"
               >
                 <img
-                  src="./public/levedura.png"
+                  src="../public/levedura.png"
                   alt="levedura"
                   class="md:w-14 md:h-14 rounded-lg"
                 />
@@ -4241,7 +4241,7 @@
                 class="font-semibold text-lg cursor-pointer flex items-center gap-4 flex-col md:flex-row"
               >
                 <img
-                  src="./public/hialuronato-de-sodio.png"
+                  src="../public/hialuronato-de-sodio.png"
                   alt="levedura"
                   class="md:w-14 md:h-14 rounded-lg"
                 />
@@ -4268,7 +4268,7 @@
                 class="font-semibold text-lg cursor-pointer flex items-center gap-4 flex-col md:flex-row"
               >
                 <img
-                  src="./public/msm.png"
+                  src="../public/msm.png"
                   alt="levedura"
                   class="md:w-14 md:h-14 rounded-lg"
                 />
@@ -4302,7 +4302,7 @@
                 class="font-semibold text-lg cursor-pointer flex items-center gap-4 flex-col md:flex-row"
               >
                 <img
-                  src="./public/l-cisteina.png"
+                  src="../public/l-cisteina.png"
                   alt="levedura"
                   class="md:w-14 md:h-14 rounded-lg"
                 />
@@ -4337,7 +4337,7 @@
                 class="font-semibold text-lg cursor-pointer flex items-center gap-4 flex-col md:flex-row"
               >
                 <img
-                  src="./public/ex-semente-de-uva.png"
+                  src="../public/ex-semente-de-uva.png"
                   alt="semente de uva"
                   class="md:w-14 md:h-14 rounded-lg"
                 />
@@ -4364,7 +4364,7 @@
                 class="font-semibold text-lg cursor-pointer flex items-center gap-4 flex-col md:flex-row"
               >
                 <img
-                  src="./public/bisglicinato-zinco.png"
+                  src="../public/bisglicinato-zinco.png"
                   alt="biotina"
                   class="md:w-14 md:h-14 rounded-lg"
                 />
@@ -4399,7 +4399,7 @@
                 class="font-semibold text-lg cursor-pointer flex items-center gap-4 flex-col md:flex-row"
               >
                 <img
-                  src="./public/vitamina-b6.png"
+                  src="../public/vitamina-b6.png"
                   alt="vitamina-b6"
                   class="md:w-14 md:h-14 rounded-lg"
                 />
@@ -4429,7 +4429,7 @@
                 class="font-semibold text-lg cursor-pointer flex items-center gap-4 flex-col md:flex-row"
               >
                 <img
-                  src="./public/vitamina-b1.png"
+                  src="../public/vitamina-b1.png"
                   alt="vitamina-b6"
                   class="md:w-14 md:h-14 rounded-lg"
                 />
@@ -4788,7 +4788,7 @@
             const videoSrc = item.getAttribute('data-video');
             if (videoSrc) {
               const preloadVideo = document.createElement('video');
-              preloadVideo.src = `./public/beneficios/${videoSrc}`;
+              preloadVideo.src = `../public/beneficios/${videoSrc}`;
               preloadVideo.preload = 'metadata';
               preloadVideo.muted = true;
             }
@@ -4813,7 +4813,7 @@
           // Atualiza o vídeo com transição suave
           const videoSrc = currentItem.getAttribute('data-video');
           if (videoSrc) {
-            const newSrc = `./public/beneficios/${videoSrc}`;
+            const newSrc = `../public/beneficios/${videoSrc}`;
             if (!video.src.endsWith(videoSrc)) {
               // Fade out do vídeo atual
               video.classList.add('video-fade-out');
@@ -4903,7 +4903,7 @@
             return (
               '<span class="' +
               className +
-              ' depoimento-pagination" style="background-image: url(./public/depoimento/figuras/depoimento-' +
+              ' depoimento-pagination" style="background-image: url(../public/depoimento/figuras/depoimento-' +
               (index + 1) +
               '.png); background-size: cover; background-position: center;">' +
               "</span>"
